Name:                fields-json
Version:             0.1
Synopsis: Abusing monadic syntax JSON objects generation.            

Description: 
  If you are generation big JSON object, with many embedded subobjects Text.JSON becames unusable.
  This library offers.
  1) Overloaded operators, so no more conversion with toJSObject, toJSArray, toJSString, etc...
  2) 'Do' notation abuse that looks quite nice.
  3) Supoport for IO digging when generation object.
  Check out documentation to get more info.

License:             BSD3
License-file:        LICENSE
Author:              Scrive
Maintainer:          mariusz@scrive.com
Stability:           None
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.2


library
  exposed-modules: 
     Text.JSON.Fields
  ghc-options:     -Wall -O2  
  
  Hs-source-dirs: src 

  build-depends: base >= 4
  build-depends: json >= 0.4.4
  build-depends: containers
  build-depends: mtl
  extensions:    FlexibleInstances,
                 TypeSynonymInstances
                 UndecidableInstances