Name:                fields-json
Version:             0.3
Synopsis:
  Abusing monadic syntax JSON objects generation.

Description:
  Generation of big, complex JSON objects with 'Text.JSON' is painful.
  And autoderivation is not always possible.
  Check documentation of 'Text.JSON.Gen' for more info.

License:             BSD3
License-file:        LICENSE
Author:              Scrive AB
Maintainer:          Mariusz Rak <mariusz@scrive.com>
Copyright:           Scrive AB
Stability:           Development
Category:            Web
Build-type:          Simple
Cabal-version:       >=1.6
Tested-with:         GHC == 7.4.2, GHC == 7.6.3, GHC == 7.8.4, GHC == 7.10.3, GHC == 8.0.1

library
  exposed-modules:
     Text.JSON.Gen
     Text.JSON.ToJSValue
     Text.JSON.FromJSValue

  hs-source-dirs: src
  GHC-Options: -Wall
  build-depends: base >= 4 && < 5
  build-depends: json >= 0.4.4
  build-depends: containers
  build-depends: base64-bytestring >= 0.1.0.2
  build-depends: utf8-string  >= 0.3.6
  build-depends: mtl
  extensions:    OverlappingInstances,
                 FlexibleInstances,
                 FlexibleContexts,
                 UndecidableInstances,
                 MultiParamTypeClasses,
                 GeneralizedNewtypeDeriving,
                 IncoherentInstances

source-repository head
    type: git
    location: git://github.com/scrive/fields-json.git
